# repro-call-clone

./: Cargo.toml  package-lock.json  package.json
.github/workflows/: test-windows.yaml
dnas/forum/workdir/: dna.yaml
dnas/forum/zomes/coordinator/posts/: Cargo.toml
dnas/forum/zomes/coordinator/posts/src/: lib.rs
tests/src/: clone.test.ts
workdir/: happ.yaml
