[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*"]

[workspace.dependencies]
hdi = "=0.2.3-beta-rc.0"
hdk = "=0.1.3-beta-rc.1"
holochain_integrity_types = "=0.1.3-beta-rc.0"
serde = "1"

[workspace.dependencies.posts]
path = "dnas/forum/zomes/coordinator/posts"
